Closed Bug 716090 Opened 14 years ago Closed 14 years ago

IonMonkey: Invalidate inactive IonScripts

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

We're failing the following tests because we're missing a few IonScripts during invalidation: ion/callgname.js ion/setelem-proto.js ion/setgname.js ion/invalidation/recursive-invalidate.js
Attached patch fixSplinter Review
Attachment #586575 - Flags: review?(christopher.leary)
Comment on attachment 586575 [details] [diff] [review] fix Review of attachment 586575 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/ion/Ion.cpp @@ +1004,5 @@ > > void > ion::Invalidate(JSContext *cx, const Vector<JSScript *> &invalid) > { > + // Add an invalidation reference to all invalidated IonScripts. Nit: can we add something like "to indicate to to the traversal which frames have been invalidated"?
Attachment #586575 - Flags: review?(christopher.leary) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: