Invalidate inactive IonScripts (bug 716090, r=cdleary).